@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.4.5"
-#define RUBY_RELEASE_DATE "2000-06-23"
+#define RUBY_RELEASE_DATE "2000-06-24"
 #define RUBY_VERSION_CODE 145
-#define RUBY_RELEASE_CODE 20000623
+#define RUBY_RELEASE_CODE 20000624
